--- a/style.css
+++ b/style.css
@@ -919,3 +919,16 @@ body {
 .search-info small {
     color: #555;
 }
+
+.summary-location {
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #ddd;
+    font-size: 1rem;
+    color: #333;
+}
+
+.summary-location i {
+    color: var(--secondary-color);
+    margin-right: 8px;
+}
