--- a/style.css
+++ b/style.css
@@ -220,12 +220,13 @@ body {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='none' stroke='%23333333' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3E%3C/svg%3E");
+    /* === THIS IS THE CORRECTED PART === */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='none' stroke='%23333333' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
-    background-position: right 15px center; /* Adjusted arrow position */
+    background-position: right 15px center;
     background-size: 1em;
     cursor: pointer;
-    padding-right: 40px; /* THIS IS THE FIX: Adds extra space for the arrow */
+    padding-right: 40px; /* Adds extra space for the arrow */
 }
 
 .btn-search {
