feat(hero): Adjust canvas positioning for improved fit with new scale

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
 /* This is the container for the 3D canvas */
 #hero-canvas-container {
     position: absolute;
-    top: -150px; /* Pushes the canvas up to pop out */
+    top: -100px; /* Reduced the "pop-out" amount to better fit the new scale */
     left: 0;
     width: 100%;
     height: 100%;
