--- a/style.css
+++ b/style.css
@@ -57,6 +57,22 @@ body {
     right: -150px;
 }
 
+.blob3 {
+    width: 300px;
+    height: 300px;
+    background-color: rgba(30, 144, 255, 0.2); /* Light blue */
+    top: 30%;
+    right: -50px;
+}
+
+.blob4 {
+    width: 350px;
+    height: 350px;
+    background-color: rgba(255, 127, 80, 0.15); /* Light orange */
+    bottom: -100px;
+    left: -100px;
+}
+
 .container {
     max-width: 1100px;
     margin: 0 auto;
